2013-04-24  Roland Clobus <rclobus@rclobus.nl>
	* admin-scripts/meta.sh: Use the correct name of the executable.
	* client/ai/lobbybot.c: Corrected the version number of the release.

2013-04-24  Roland Clobus <rclobus@rclobus.nl>
	* metaserver/main.c, client/gtk/connect.c, common/state.c,
	common/common_glib.c, common/state.h, common/network.c,
	common/common_glib.h, common/driver.c, common/network.h,
	common/driver.h, common/gtk/common_gtk.c, server/server.h,
	server/main.c, server/glib-driver.c, server/glib-driver.h,
	server/meta.c, server/admin.c, server/player.c, server/server.c: Moved
	all network related code to network.[ch]; fixed memory leak in
	net_io_channel_wrapper (formerly called evl_glib_input functions);
	the metaserver uses network.c too; fixed handling of metaserver
	redirects; enabled the ok-button in the client dialogs only when all
	data is available; the metaserver checks the availability of the port
	when starting a new server.

2013-04-21  Roland Clobus <rclobus@rclobus.nl>
	* common/set.c, common/set.h: Added set_size, added documentation.

2013-04-20  Roland Clobus <rclobus@rclobus.nl>
	* common/set.c, common/set.h, common/Makefile.am: Added algorithm Set.

2013-04-15  Micah Bunting <Amnykon@gmail.com>
	* client/gtk/frontend.c, client/gtk/frontend.h, client/gtk/identity.c:
	Resize the height of the identity panel.

2013-04-05  Roland Clobus <rclobus@rclobus.nl>
	* client/ai/Makefile.am, client/ai/ai.c, client/ai/ai.h,
	client/ai/genetic.c: Added stub for a new computer player.

2013-03-19  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac, Makefile.am, MinGW/README.txt, MinGW/iconify2.scm,
	client/gtk/data/pioneers.ico, server/gtk/pioneers-server.ico,
	editor/gtk/pioneers-editor.ico: Store hard to regenerate MSWindows
	icons in the repository again. (Icons are now also 256x256)

2013-03-17  Roland Clobus <rclobus@rclobus.nl>
	* server/avahi.c, server/meta.c, common/network.c, common/network.h: