@@ -12,7 +12,7 @@ Vcs-Browser: http://pio.svn.sourceforge.net/viewvc/pio/trunk/pioneers/
 Package: pioneers
 Architecture: any
 Depends: pioneers-console (=${binary:Version}), pioneers-data (=${source:Version}), librsvg2-common, ${shlibs:Depends}, ${misc:Depends}
-Recommends: yelp
+Recommends: yelp, beep
 Suggests: pioneers-metaserver
 Description: Settlers of Catan board game
  Pioneers is a computer implementation of the Settlers of Catan board game.
