@@ -10,6 +10,7 @@ pioneers (14.2-1~local1) UNRELEASED; urgency=low
   * Cleanup of /etc/default/pioneers-console and /etc/init.d/pioneers-console
     (when the installation has been upgraded from 0.11.3 or older)
   * Added dependency on librsvg2-common for the rendering of the icons.
+  * Added recommends on beep.
 
  -- Roland Clobus <rclobus@rclobus.nl>  Fri, 25 Jan 2013 17:05:00 +0100
 
